通讯同步完成，继承SyncPort 命令内容待补充

--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -177,4 +177,5 @@
     <system:String x:Key="Loading {0}\r\nException: {1}\r\nSource: {2}">加载{0}\r\n异常:{1}\r\n来源:{2}</system:String>
     <system:String x:Key="Loading {0}...">正在加载 {0} ...</system:String>
     <system:String x:Key="Loading completed">加载完成</system:String>
+    <system:String x:Key="DOE">实验设计</system:String>
 </ResourceDictionary>
