--- a/RD3/Views/EditUserView.xaml
+++ b/RD3/Views/EditUserView.xaml
@@ -16,7 +16,6 @@
     Width="220"
     Height="250"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditUserViewModel}"
-    Background="{StaticResource BackGroundBrush}"
     mc:Ignorable="d">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window">
@@ -31,7 +30,6 @@
             <Setter Property="AllowsTransparency" Value="True" />
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
             <Setter Property="Opacity" Value="1" />
         </Style>
     </prism:Dialog.WindowStyle>
@@ -45,10 +43,7 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </UserControl.Resources>
-    <Border
-        BorderBrush="{StaticResource PrimaryBorderBrush}"
-        CornerRadius="8"
-        Effect="{StaticResource EffectShadow1}">
+    <Border Style="{StaticResource BorderCard}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
