--- a/RD3/Views/LoginView.xaml
+++ b/RD3/Views/LoginView.xaml
@@ -30,90 +30,97 @@
             <Setter Property="AllowsTransparency" Value="True" />
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
+            <!--<Setter Property="Background" Value="{StaticResource BackGroundBrush}" />-->
         </Style>
     </prism:Dialog.WindowStyle>
-    <Grid Background="{StaticResource BackGroundBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <md:Snackbar
-            x:Name="LoginSnakeBar"
-            Grid.Row="1"
-            Grid.ColumnSpan="2"
-            Panel.ZIndex="1"
-            MessageQueue="{md:MessageQueue}" />
-        <Image
-            Grid.Row="1"
-            Margin="50"
-            Source="/Images/login.png" />
-        <md:Transitioner
-            Grid.Row="1"
-            Grid.Column="1"
-            SelectedIndex="{Binding SelectIndex, FallbackValue=0}">
-            <md:TransitionerSlide>
-                <DockPanel Margin="15" VerticalAlignment="Center">
-                    <TextBlock
-                        Margin="0,10"
-                        DockPanel.Dock="Top"
-                        FontSize="22"
-                        FontWeight="Bold"
-                        Text="{ex:Language Key='欢迎使用'}" />
-                    <TextBox
-                        Margin="0,10"
-                        VerticalAlignment="Center"
-                        hc:InfoElement.Placeholder="{ex:Language Key='请输入账号'}"
-                        DockPanel.Dock="Top"
-                        Style="{StaticResource TextBoxExtend}"
-                        Text="{Binding UserName}" />
-                    <PasswordBox
-                        Margin="0,10"
-                        hc:InfoElement.Placeholder="{ex:Language Key='请输入密码'}"
-                        hc:PasswordBoxAttach.PasswordLength="0"
-                        pass:PassWordExtensions.PassWord="{Binding PassWord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        DockPanel.Dock="Top"
-                        PasswordChar="*"
-                        Style="{DynamicResource PasswordBoxExtend}">
-                        <i:Interaction.Behaviors>
-                            <pass:PasswordBehavior />
-                        </i:Interaction.Behaviors>
-                    </PasswordBox>
+    <Border
+        Background="{StaticResource BackGroundBrush}"
+        BorderBrush="{DynamicResource BorderBrush}"
+        BorderThickness="0"
+        CornerRadius="4">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.5*" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <md:Snackbar
+                x:Name="LoginSnakeBar"
+                Grid.Row="1"
+                Grid.ColumnSpan="2"
+                Panel.ZIndex="1"
+                MessageQueue="{md:MessageQueue}" />
+            <Image
+                Grid.Row="1"
+                Margin="50"
+                Source="/Images/login.png" />
+            <md:Transitioner
+                Grid.Row="1"
+                Grid.Column="1"
+                SelectedIndex="{Binding SelectIndex, FallbackValue=0}">
+                <md:TransitionerSlide>
+                    <DockPanel Margin="15" VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,10"
+                            DockPanel.Dock="Top"
+                            FontSize="22"
+                            FontWeight="Bold"
+                            Text="{ex:Language Key='欢迎使用'}" />
+                        <TextBox
+                            Margin="0,10"
+                            VerticalAlignment="Center"
+                            hc:InfoElement.Placeholder="{ex:Language Key='请输入账号'}"
+                            DockPanel.Dock="Top"
+                            Style="{StaticResource TextBoxExtend}"
+                            Text="{Binding UserName}" />
+                        <PasswordBox
+                            Margin="0,10"
+                            hc:InfoElement.Placeholder="{ex:Language Key='请输入密码'}"
+                            hc:PasswordBoxAttach.PasswordLength="0"
+                            pass:PassWordExtensions.PassWord="{Binding PassWord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            DockPanel.Dock="Top"
+                            PasswordChar="*"
+                            Style="{DynamicResource PasswordBoxExtend}">
+                            <i:Interaction.Behaviors>
+                                <pass:PasswordBehavior />
+                            </i:Interaction.Behaviors>
+                        </PasswordBox>
 
-                    <Button
-                        hc:BorderElement.CornerRadius="15"
-                        Command="{Binding ExecuteCommand}"
-                        CommandParameter="Login"
-                        Content="{ex:Language Key='登录系统'}"
-                        DockPanel.Dock="Top"
-                        IsDefault="True"
-                        Style="{StaticResource ButtonPrimary}" />
+                        <Button
+                            hc:BorderElement.CornerRadius="15"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="Login"
+                            Content="{ex:Language Key='登录系统'}"
+                            DockPanel.Dock="Top"
+                            IsDefault="True"
+                            Style="{StaticResource ButtonPrimary}" />
 
-                    <DockPanel
-                        Margin="0,5"
-                        LastChildFill="False"
-                        Visibility="Hidden">
-                        <TextBlock Text="注册账号">
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="MouseLeftButtonDown">
-                                    <i:InvokeCommandAction Command="{Binding ExecuteCommand}" CommandParameter="ResgiterPage" />
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                        </TextBlock>
-                        <TextBlock DockPanel.Dock="Right" Text="忘记密码?" />
+                        <DockPanel
+                            Margin="0,5"
+                            LastChildFill="False"
+                            Visibility="Hidden">
+                            <TextBlock Text="注册账号">
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                                        <i:InvokeCommandAction Command="{Binding ExecuteCommand}" CommandParameter="ResgiterPage" />
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </TextBlock>
+                            <TextBlock DockPanel.Dock="Right" Text="忘记密码?" />
+                        </DockPanel>
                     </DockPanel>
-                </DockPanel>
-            </md:TransitionerSlide>
-        </md:Transitioner>
-        <Button
-            Name="btnClose"
-            Grid.ColumnSpan="2"
-            HorizontalAlignment="Right"
-            hc:IconElement.Geometry="{StaticResource CloseGeometry}"
-            Style="{StaticResource ToolButtonStyle}" />
-    </Grid>
+                </md:TransitionerSlide>
+            </md:Transitioner>
+            <Button
+                Name="btnClose"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Right"
+                hc:IconElement.Geometry="{StaticResource CloseGeometry}"
+                Style="{StaticResource ToolButtonStyle}" />
+        </Grid>
+    </Border>
+
 </UserControl>
